fix layout on mobile

--- a/memoria/memoria.css
+++ b/memoria/memoria.css
@@ -8,6 +8,7 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     color: #333;
+    min-width: min-content;
 }
 
 h1 {
