--- a/quebra_cabeca/quebra.css
+++ b/quebra_cabeca/quebra.css
@@ -8,6 +8,7 @@ body {
     background-color: #f0f2f5;
     margin: 0;
     color: #333;
+    min-width: min-content;
 }
 
 h1 {
